Done iframe class and exercise

--- a/week1/index.html
+++ b/week1/index.html
@@ -15,5 +15,9 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Little Lemon" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <iframe src="https://google.com" width="600px"></iframe>
+    </main>
+  </body>
 </html>
